[package]
name = "websum"
version = "0.2.1"
edition = "2021"
description = "Next-gen integrity checker written in Rust"
license = "MIT"
author = "Abdürrahim YILMAZ <ayilmaz@ayilmaz.xyz>"

[dependencies]
reqwest = { version = "0.12.5", features = ["blocking"] }
data-encoding = "2.6.0"
ring = "0.17.8"
